Fix images not visible - add top: 0 positioning

--- a/templates-blocks/image-parallax-slider/view.scss
+++ b/templates-blocks/image-parallax-slider/view.scss
@@ -36,10 +36,7 @@
     
     img {
         position: absolute;
-        width: 100%;
-        height: auto;
-        min-height: 120%;
-        object-fit: cover;
+        top: 0;
         will-change: top;
         transition: top 0.1s ease-out;
     }
@@ -54,8 +51,10 @@
     bottom: 0;
     
     img {
+        left: 0;
         width: 100%;
         height: 120%;
+        object-fit: cover;
         object-position: center;
     }
 }
@@ -70,7 +69,6 @@
         width: auto;
         max-width: 100%;
         height: auto;
-        min-height: auto;
         object-fit: contain;
     }
 }
